--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,56 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<resources>
+
     <style name="Base.Theme.P_One" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="alertDialogTheme">@style/POne.DialogOverlay</item>
+        <item name="materialAlertDialogTheme">@style/POne.DialogOverlay</item>
+        <item name="editTextStyle">@style/POne.EditText</item>
     </style>
+
+    <style name="Theme.P_One" parent="Base.Theme.P_One" />
+
+    <style name="POne.DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/dialog_enter</item>
+        <item name="android:windowExitAnimation">@anim/dialog_exit</item>
+    </style>
+
+    <style name="POne.DialogOverlay" parent="ThemeOverlay.AppCompat.Dialog.Alert">
+        <item name="android:windowBackground">@drawable/pone_dialog_card_night</item>
+        <item name="android:windowAnimationStyle">@style/POne.DialogAnimation</item>
+
+        <item name="buttonBarPositiveButtonStyle">@style/POne.DialogButton.Negative</item>
+        <item name="buttonBarNegativeButtonStyle">@style/POne.DialogButton.Negative</item>
+    </style>
+
+    <style name="POne.DialogTitle" parent="TextAppearance.AppCompat.Title">
+        <item name="android:textColor">#FFA726</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="POne.DialogBody" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textColor">#E0E0E0</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="POne.DialogButton.Primary" parent="Widget.AppCompat.Button.ButtonBar.AlertDialog">
+        <item name="android:background">@drawable/pone_btn_primary</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="POne.DialogButton.Negative" parent="Widget.AppCompat.Button.ButtonBar.AlertDialog">
+        <item name="android:textColor">#FFA726</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="POne.EditText" parent="Widget.AppCompat.EditText">
+        <item name="android:background">@drawable/pone_edittext_bg</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textColorHint">#BDBDBD</item>
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingRight">12dp</item>
+    </style>
+
+    <style name="POne" parent="@style/Theme.P_One" />
+
 </resources>
