--- a/app/src/main/res/drawable/pone_btn_primary.xml
+++ b/app/src/main/res/drawable/pone_btn_primary.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <corners android:radius="12dp"/>
     <solid android:color="#FFA726"/>
-    <padding android:left="16dp" android:top="10dp" android:right="16dp" android:bottom="10dp"/>
+    <!-- antes: left/right 16dp, top/bottom 10dp -->
+    <padding android:left="10dp" android:top="8dp" android:right="10dp" android:bottom="8dp"/>
 </shape>
