--- a/app/src/main/res/layout/activity_crud_administrador.xml
+++ b/app/src/main/res/layout/activity_crud_administrador.xml
@@ -5,43 +5,19 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".crud_registro"
+    tools:context=".crudAdmin.crudAdministrador"
     android:background="@drawable/backgroundventanas">
 
     <LinearLayout
         android:id="@+id/main_container"
         android:layout_width="384dp"
-        android:layout_height="402dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.407"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.55">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:boxBackgroundColor="#FFFFFF"
-            app:boxBackgroundMode="outline"
-            app:boxCornerRadiusBottomEnd="12dp"
-            app:boxCornerRadiusBottomStart="12dp"
-            app:boxCornerRadiusTopEnd="12dp"
-            app:boxCornerRadiusTopStart="12dp"
-            app:boxStrokeColor="#000000"
-            app:boxStrokeWidth="1dp"
-            app:boxStrokeWidthFocused="2dp"
-            app:hintTextColor="#000000">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Correo"
-                android:inputType="textEmailAddress" />
-        </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <!-- Nombre -->
         <com.google.android.material.textfield.TextInputLayout
@@ -59,12 +35,13 @@
             app:hintTextColor="#000000">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtNombre"
+                android:id="@+id/txt_nombreAdmin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Nombre"
                 android:inputType="textPersonName" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <!-- Apellido -->
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -81,13 +58,14 @@
             app:hintTextColor="#000000">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txt_Apellido"
+                android:id="@+id/txt_apellidoAdmin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Apellido"
                 android:inputType="textPersonName" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!-- Correo -->
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -100,17 +78,17 @@
             app:boxStrokeColor="#000000"
             app:boxStrokeWidth="1dp"
             app:boxStrokeWidthFocused="2dp"
-            app:endIconMode="password_toggle"
             app:hintTextColor="#000000">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txtPassword"
+                android:id="@+id/txt_correoAdmin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Contraseña"
-                android:inputType="textPassword" />
+                android:hint="Correo"
+                android:inputType="textEmailAddress" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <!-- Botones en horizontal -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -120,38 +98,32 @@
             android:orientation="horizontal">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnVolver"
+                android:id="@+id/btnCrearAdmin"
                 android:layout_width="130dp"
                 android:layout_height="53dp"
                 android:layout_marginEnd="10dp"
-                android:fontFamily="sans-serif-medium"
-                android:onClick="volver"
-                android:text="Volver"
+                android:text="Crear admin"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
+                android:fontFamily="sans-serif-medium"
                 app:backgroundTint="#FFA726"
-                app:cornerRadius="12dp"
-                app:rippleColor="#CC7A00" />
+                app:rippleColor="#CC7A00"
+                app:cornerRadius="12dp" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnRegistrar"
+                android:id="@+id/btnVerListaAdmin"
                 android:layout_width="130dp"
                 android:layout_height="53dp"
                 android:layout_marginStart="10dp"
-                android:fontFamily="sans-serif-medium"
-                android:text="Crear cuenta"
+                android:text="Ver lista"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
+                android:fontFamily="sans-serif-medium"
                 app:backgroundTint="#FFA726"
-                app:cornerRadius="12dp"
-                app:rippleColor="#CC7A00" />
+                app:rippleColor="#CC7A00"
+                app:cornerRadius="12dp" />
         </LinearLayout>
 
-        <ProgressBar
-            android:id="@+id/progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:visibility="gone" />
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
